# billy-the-kid

./: .gitignore  README.md  pyproject.toml
arduino/sketch_may8a/: sketch_may8a.ino
src/: camera_test.py  custom_serial.py  main.py  serial.py
src/billy_the_kid/: __init__.py  camera.py  main.py  rekognition.py
src/billy_the_kid/rekognition/: main.py
